--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header header-section">
+    <!-- <header class="header header-section">
       <div class="header-container container">
         <nav class="nav">
           <a class="logo-link link" href="./index.html">
@@ -56,19 +56,18 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
-      <section class="hero hero-section">
+      <!-- <section class="hero hero-section">
         <div class="hero-container container">
           <h1 class="hero-headings">Effective Solutions for Your Business</h1>
           <button class="btn" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
-      <section class="about about-section">
+      </section> -->
+      <!-- <section class="about about-section">
         <div class="about-container container">
-          <!-- hide h2 -->
           <h2 hidden class="hidden">About Us</h2>
           <ul class="about-icons-list list">
             <li>
@@ -131,8 +130,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="products products-section">
+      </section> -->
+      <!-- <section class="products products-section">
         <div class="products-container container">
           <h2 class="products-header">What are we doing</h2>
           <ul class="products-list list">
@@ -162,13 +161,14 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <section class="teem teem-section">
         <div class="team-container container">
           <h2 class="team-header">Our Team</h2>
           <ul class="team-list list">
             <li class="team-list-item">
               <img
+                class="foto"
                 src="./images/foto1.jpg"
                 width="264"
                 height="260"
@@ -232,6 +232,7 @@
             </li>
             <li class="team-list-item">
               <img
+                class="foto"
                 src="./images/foto2.jpg"
                 width="264"
                 height="260"
@@ -295,6 +296,7 @@
             </li>
             <li class="team-list-item">
               <img
+                class="foto"
                 src="./images/foto3.jpg"
                 width="264"
                 height="260"
@@ -358,6 +360,7 @@
             </li>
             <li class="team-list-item">
               <img
+                class="foto"
                 src="./images/foto4.jpg"
                 width="264"
                 height="260"
@@ -422,7 +425,7 @@
           </ul>
         </div>
       </section>
-      <section class="customers customers-section">
+      <!-- <section class="customers customers-section">
         <div class="customers-container container">
           <h2 class="customers-heading">Customers</h2>
           <ul class="customers-links list">
@@ -506,9 +509,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer footer-section">
+    <!-- <footer class="footer footer-section">
       <div class="footer-container container">
         <div class="footer-left-side">
           <a class="logo-link link" href="./index.html">
@@ -594,9 +597,9 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- modal windov -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-cls-btn" type="button" data-modal-close>
           <svg class="modal-cls-icon" width="8" height="8">
@@ -672,7 +675,7 @@
         </form>
         <button class="btn" type="submit">Send</button>
       </div>
-    </div>
+    </div> -->
     <!-- modal script -->
     <script src="./js/modal.js"></script>
   </body>
