--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           </ul>
         </div>
       </section> -->
-      <section class="teem teem-section">
+      <!-- <section class="teem teem-section">
         <div class="team-container container">
           <h2 class="team-header">Our Team</h2>
           <ul class="team-list list">
@@ -424,8 +424,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <!-- <section class="customers customers-section">
+      </section> -->
+      <section class="customers customers-section">
         <div class="customers-container container">
           <h2 class="customers-heading">Customers</h2>
           <ul class="customers-links list">
@@ -509,7 +509,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="footer footer-section">
       <div class="footer-container container">
