--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
       </div>
     </header> -->
     <main>
-      <!-- <section class="hero hero-section">
+      <section class="hero hero-section">
         <div class="hero-container container">
           <h1 class="hero-headings">Effective Solutions for Your Business</h1>
           <button class="btn" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
-      <!-- <section class="about about-section">
+      </section>
+      <section class="about about-section">
         <div class="about-container container">
           <h2 hidden class="hidden">About Us</h2>
           <ul class="about-icons-list list">
@@ -130,8 +130,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="products products-section">
+      </section>
+      <section class="products products-section">
         <div class="products-container container">
           <h2 class="products-header">What are we doing</h2>
           <ul class="products-list list">
@@ -161,8 +161,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="teem teem-section">
+      </section>
+      <section class="teem teem-section">
         <div class="team-container container">
           <h2 class="team-header">Our Team</h2>
           <ul class="team-list list">
@@ -424,7 +424,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <section class="customers customers-section">
         <div class="customers-container container">
           <h2 class="customers-heading">Customers</h2>
@@ -511,10 +511,10 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer footer-section">
+    <footer class="footer footer-section">
       <div class="footer-container container">
         <div class="footer-left-side">
-          <a class="logo-link link" href="./index.html">
+          <a class="logo-link link footer-logo" href="./index.html">
             Web<span class="logo-text">Studio</span></a
           >
           <p class="footer-text footer-cl-txt">
@@ -597,7 +597,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- modal windov -->
     <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
