--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
       </div>
     </footer>
     <!-- modal windov -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-cls-btn" type="button" data-modal-close>
           <svg class="modal-cls-icon" width="8" height="8">
@@ -675,7 +675,7 @@
         </form>
         <button class="btn" type="submit">Send</button>
       </div>
-    </div> -->
+    </div>
     <!-- modal script -->
     <script src="./js/modal.js"></script>
   </body>
