--- a/index.html
+++ b/index.html
@@ -24,10 +24,38 @@
           <a class="logo-link link" href="./index.html">
             Web<span class="logo-text logo-up-cl">Studio</span></a
           >
+          <ul class="nav-list list">
+            <li>
+              <a
+                class="nav-link link activ-page activ-page-txt-cl"
+                href="./index.html"
+              >
+                Studio
+              </a>
+            </li>
+            <li>
+              <a class="nav-link link" href="./portfolio.html"> Portfolio </a>
+            </li>
+            <li>
+              <a class="nav-link link" href=""> Contacts </a>
+            </li>
+          </ul>
+        </nav>
+        <address class="addres">
+          <ul class="adres-list list">
+            <li class="adres-list-item">
+              <a class="contacts-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="adres-list-item">
+              <a class="contacts-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
         </address>
-        
-      </div>
-      <button
+         <button
             class="menu-toggle js-open-menu"
             aria-expanded="false"
             aria-controls="mobile-menu"
@@ -36,6 +64,7 @@
                   <use href="./images/icons.svg#burger-menu"></use>
                 </svg>
           </button>
+      </div>
     </header>
     <main>
       <section class="hero hero-section">
@@ -687,9 +716,40 @@
         <button class="btn" type="submit">Send</button>
       </div>
     </div>
+    <!-- mobile menu -->
+     <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu">
+        <li><a href="" class="link">About</a></li>
+        <li><a href="" class="link">Products</a></li>
+        <li><a href="" class="link">Contacts</a></li>
+        <li><a href="" class="link">Career</a></li>
+      </ul>
+    </div>
     <!-- modal script -->
     <script src="./js/modal.js"></script>
     <!-- mobile-menu script -->
+        <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
