--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
             </li>
           </ul>
         </address>
-        <button
-          class="menu-toggle js-open-menu"
-          aria-expanded="false"
-          aria-controls="mobile-menu"
-        >
-          <svg class="burger-menu" width="32" height="22">
-            <use href="./images/icons.svg#burger-menu"></use>
-          </svg>
-        </button>
+         <button
+            class="menu-toggle js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg class="burger-menu" width="32" height="22">
+                  <use href="./images/icons.svg#burger-menu"></use>
+                </svg>
+          </button>
       </div>
     </header>
     <main>
@@ -73,6 +73,37 @@
           <button class="btn" type="button" data-modal-open>
             Order Service
           </button>
+          <ul class="nav-list list">
+            <li>
+              <a
+                class="nav-link link activ-page activ-page-txt-cl"
+                href="./index.html"
+              >
+                Studio
+              </a>
+            </li>
+            <li>
+              <a class="nav-link link" href="./portfolio.html"> Portfolio </a>
+            </li>
+            <li>
+              <a class="nav-link link" href=""> Contacts </a>
+            </li>
+          </ul>
+        </nav>
+        <address class="addres">
+          <ul class="adres-list list">
+            <li class="adres-list-item">
+              <a class="contacts-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="adres-list-item">
+              <a class="contacts-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+          
         </div>
       </section>
       <section class="about about-section">
@@ -146,7 +177,6 @@
           <ul class="products-list list">
             <li class="products-list-item">
               <img
-                srcset="./images/pic1@2x.jpg"
                 src="./images/pic1.jpg"
                 width="360"
                 height="300"
@@ -155,7 +185,6 @@
             </li>
             <li class="products-list-item">
               <img
-                srcset="./images/pic2@2x.jpg"
                 src="./images/pic2.jpg"
                 width="360"
                 height="300"
@@ -164,7 +193,6 @@
             </li>
             <li class="products-list-item">
               <img
-                srcset="./images/pic3@2x.jpg"
                 src="./images/pic3.jpg"
                 width="360"
                 height="300"
@@ -181,7 +209,6 @@
             <li class="team-list-item">
               <img
                 class="foto"
-                srcset="./images/foto1.jpg 1x, ./images/foto1@2x.jpg 2x"
                 src="./images/foto1.jpg"
                 width="264"
                 height="260"
@@ -246,7 +273,6 @@
             <li class="team-list-item">
               <img
                 class="foto"
-                srcset="./images/foto2.jpg 1x, ./images/foto2@2x.jpg 2x"
                 src="./images/foto2.jpg"
                 width="264"
                 height="260"
@@ -311,7 +337,6 @@
             <li class="team-list-item">
               <img
                 class="foto"
-                srcset="./images/foto3.jpg 1x, ./images/fofo3@2x.jpg 2x"
                 src="./images/foto3.jpg"
                 width="264"
                 height="260"
@@ -376,7 +401,6 @@
             <li class="team-list-item">
               <img
                 class="foto"
-                srcset="./images/foto4.jpg 1x, ./images/foto4@2x.jpg 2x"
                 src="./images/foto4.jpg"
                 width="264"
                 height="260"
@@ -693,15 +717,14 @@
       </div>
     </div>
     <!-- mobile menu -->
-    <div class="menu-container js-menu-container" id="mobile-menu">
+     <div class="menu-container js-menu-container" id="mobile-menu">
       <button class="menu-toggle js-close-menu">
         <svg
-          class="menu-toggle-icon"
           fill="currentColor"
           viewBox="0 0 20 20"
           xmlns="http://www.w3.org/2000/svg"
-          width="8"
-          height="8"
+          width="24"
+          height="24"
         >
           <path
             fill-rule="evenodd"
@@ -710,91 +733,18 @@
           ></path>
         </svg>
       </button>
+
       <ul class="mobile-menu">
-        <li class="mobile-menu-item">
-          <a href="" class="mobile-menu-item-link link">Studio</a>
-        </li>
-        <li class="mobile-menu-item">
-          <a href="" class="mobile-menu-item-link link">Portfolio</a>
-        </li>
-        <li class="mobile-menu-item">
-          <a href="" class="mobile-menu-item-link link">Contacts</a>
-        </li>
+        <li><a href="" class="link">About</a></li>
+        <li><a href="" class="link">Products</a></li>
+        <li><a href="" class="link">Contacts</a></li>
+        <li><a href="" class="link">Career</a></li>
       </ul>
-      <div>
-        <address class="mob-menu-addres">
-          <ul class="mob-menu-adres-list list">
-            <li class="mob-menu-list-item">
-              <a class="mob-menu-contacts-link link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-            <li class="mob-menu-list-item">
-              <a
-                class="mob-menu-contacts-link menu-mail link"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-          </ul>
-        </address>
-        <ul class="mob-socials list">
-          <li class="socials-item">
-            <a
-              class="social-link link"
-              href=""
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="instagram icon"
-            >
-              <svg class="socials-icon" width="24" height="24">
-                <use href="./images/icons.svg#instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socials-item">
-            <a
-              class="social-link link"
-              href=""
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="twitter icon"
-              ><svg class="socials-icon" width="24" height="24">
-                <use href="./images/icons.svg#twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socials-item">
-            <a
-              class="social-link link"
-              href=""
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="facebook icon"
-              ><svg class="socials-icon" width="24" height="24">
-                <use href="./images/icons.svg#facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socials-item">
-            <a
-              class="social-link link"
-              href=""
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="linkedin icon"
-              ><svg class="socials-icon" width="24" height="24">
-                <use href="./images/icons.svg#linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
     </div>
     <!-- modal script -->
     <script src="./js/modal.js"></script>
     <!-- mobile-menu script -->
-    <script
+        <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
