--- a/portfolio.html
+++ b/portfolio.html
@@ -43,27 +43,18 @@
         </nav>
         <address class="addres">
           <ul class="adres-list list">
-            <li class="adres-list-item">
+            <li>
               <a class="contacts-link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="adres-list-item">
+            <li>
               <a class="contacts-link link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
           </ul>
         </address>
-        <button
-          class="menu-toggle js-open-menu"
-          aria-expanded="false"
-          aria-controls="mobile-menu"
-        >
-          <svg class="burger-menu" width="32" height="22">
-            <use href="./images/icons.svg#burger-menu"></use>
-          </svg>
-        </button>
       </div>
     </header>
     <main>
@@ -302,7 +293,7 @@
     <footer class="footer footer-section">
       <div class="footer-container container">
         <div class="footer-left-side">
-          <a class="logo-link link footer-logo" href="./index.html">
+          <a class="logo-link link" href="./index.html">
             Web<span class="logo-text">Studio</span></a
           >
           <p class="footer-text footer-cl-txt">
@@ -310,7 +301,7 @@
             digital marketing &#38; growth solutions.
           </p>
         </div>
-        <div class="social-media">
+        <div>
           <p class="footer-social-text">Social media</p>
           <ul class="footer-socials list">
             <li class="footer-socials-item">
@@ -321,7 +312,7 @@
                 rel="noopener noreferrer"
                 aria-label="instagram icon"
               >
-                <svg class="socials-icon" width="24" height="24">
+                <svg class="socials-icon" width="24px" height="24px">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
@@ -334,7 +325,7 @@
                 rel="noopener noreferrer"
                 aria-label="instagram icon"
               >
-                <svg class="socials-icon" width="24" height="24">
+                <svg class="socials-icon" width="24px" height="24px">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
@@ -347,7 +338,7 @@
                 rel="noopener noreferrer"
                 aria-label="instagram icon"
               >
-                <svg class="socials-icon" width="24" height="24">
+                <svg class="socials-icon" width="24px" height="24px">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
@@ -360,144 +351,14 @@
                 rel="noopener noreferrer"
                 aria-label="instagram icon"
               >
-                <svg class="socials-icon" width="24" height="24">
+                <svg class="socials-icon" width="24px" height="24px">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <div class="subscribe">
-          <p class="subscribe-text">Subscribe</p>
-          <div class="form-content">
-            <form class="subscribe-form" name="subscribe-form">
-              <label>
-                <input class="subscribe-form-filds" type="email" name="email" />
-                <span class="subscribe-form-tag">E-mail</span>
-              </label>
-            </form>
-            <button class="subscribe-btn" type="submit">
-              <span>Subscribe</span>
-              <svg class="customers-icon" width="24" height="20">
-                <use href="./images/icons.svg#send"></use>
-              </svg>
-            </button>
-          </div>
-        </div>
       </div>
     </footer>
-    <!-- modal windov -->
-    <div class="backdrop is-hidden" data-modal>
-      <div class="modal">
-        <button class="modal-cls-btn" type="button" data-modal-close>
-          <svg class="modal-cls-icon" width="8" height="8">
-            <use href="./images/icons.svg#close"></use>
-          </svg>
-        </button>
-        <p class="modal-text">Leave your contacts and we will call you back</p>
-        <form name="modal-form">
-          <label class="modal-name-fild" for="modal-name">Name</label>
-          <div class="modal-filds-wrapper">
-            <input
-              class="modal-fild"
-              type="text"
-              name="modal-name"
-              id="modal-name"
-              placeholder=" "
-            />
-            <svg class="modal-icon" width="18" height="18">
-              <use href="./images/icons.svg#name-icon"></use>
-            </svg>
-          </div>
-          <label class="modal-name-fild" for="modal-phone">Phone</label>
-          <div class="modal-filds-wrapper">
-            <input
-              class="modal-fild"
-              type="tel"
-              name="modal-phone"
-              id="modal-phone"
-              placeholder=" "
-            />
-            <svg class="modal-icon" width="18" height="24">
-              <use href="./images/icons.svg#phone-icon"></use>
-            </svg>
-          </div>
-          <label class="modal-name-fild" for="modal-email">Email</label>
-          <div class="modal-filds-wrapper">
-            <input
-              class="modal-fild"
-              type="email"
-              name="modal-email"
-              id="modal-email"
-              placeholder=" "
-            />
-            <svg class="modal-icon" width="18" height="24">
-              <use href="./images/icons.svg#email-icon"></use>
-            </svg>
-          </div>
-          <label class="modal-name-fild" for="modal-comment">Comment</label>
-          <textarea
-            class="modal-comment"
-            name="modal-comment"
-            id="modal-comment"
-            rows="5"
-            placeholder="Text input"
-          ></textarea>
-          <label class="modal-checkbox-wrapper">
-            <input
-              class="modal-agreement-checkbox"
-              type="checkbox"
-              name="modal-agreement"
-            />
-            <svg class="check-icon" width="16" height="16">
-              <use
-                class="check-icon-part"
-                href="./images/icons.svg#check"
-              ></use>
-            </svg>
-            <span class="modal-agreement-text"
-              >I accept the terms and conditions of the
-              <a href="">Privacy Policy</a></span
-            >
-          </label>
-        </form>
-        <button class="btn" type="submit">Send</button>
-      </div>
-    </div>
-    <!-- mobile menu -->
-    <div class="menu-container js-menu-container" id="mobile-menu">
-      <button class="menu-toggle js-close-menu">
-        <svg
-          fill="currentColor"
-          viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-            clip-rule="evenodd"
-          ></path>
-        </svg>
-      </button>
-
-      <ul class="mobile-menu">
-        <li><a href="" class="link">About</a></li>
-        <li><a href="" class="link">Products</a></li>
-        <li><a href="" class="link">Contacts</a></li>
-        <li><a href="" class="link">Career</a></li>
-      </ul>
-    </div>
-    <!-- modal script -->
-    <script src="./js/modal.js"></script>
-    <!-- mobile-menu script -->
-    <script
-      defer
-      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
-      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-      crossorigin="anonymous"
-    ></script>
-    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
